tests/ui/generic-associated-types/unsatisfied-item-lifetime-bound.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/unsatisfied-item-lifetime-bound.rs:6:18
   |
LL |     type Y<'a: 'static>;
   |     ------------------- definition of `Y` from trait
...
LL |     type Y<'a> = &'a ();
   |                  ^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
  --> $DIR/unsatisfied-item-lifetime-bound.rs:6:12
   |
LL |     type Y<'a> = &'a ();
   |            ^^
   = note: but lifetime parameter must outlive the static lifetime
help: copy the `where` clause predicates from the trait
   |
LL |     type Y<'a> = &'a () where 'a: 'static;
   |                         +++++++++++++++++

error[E0478]: lifetime bound not satisfied
  --> $DIR/unsatisfied-item-lifetime-bound.rs:11:8
   |
LL |     f: <T as X>::Y<'a>,
   |        ^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
  --> $DIR/unsatisfied-item-lifetime-bound.rs:10:10
   |
LL | struct B<'a, T: for<'r> X<Y<'r> = &'r ()>> {
   |          ^^
   = note: but lifetime parameter must outlive the static lifetime

error[E0478]: lifetime bound not satisfied
  --> $DIR/unsatisfied-item-lifetime-bound.rs:16:8
   |
LL |     f: <T as X>::Y<'a>,
   |        ^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
  --> $DIR/unsatisfied-item-lifetime-bound.rs:15:10
   |
LL | struct C<'a, T: X> {
   |          ^^
   = note: but lifetime parameter must outlive the static lifetime

error[E0478]: lifetime bound not satisfied
  --> $DIR/unsatisfied-item-lifetime-bound.rs:21:8
   |
LL |     f: <() as X>::Y<'a>,
   |        ^^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
  --> $DIR/unsatisfied-item-lifetime-bound.rs:20:10
   |
LL | struct D<'a> {
   |          ^^
   = note: but lifetime parameter must outlive the static lifetime

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0478`.
